@@ -18,6 +18,9 @@ Currently deprecated and liable to be removed:
 	
 * bam(...,discrete=TRUE) fix to handle nested matrix arguments to smooths.
 
+* bam was reporting wrong family under some smoothing parameter selection 
+  methods (not default).
+
 * null deviance computation improved for extended families. Previous version 
   used an approximation valid for most families, and corrected the rest - now 
   replaced with exact computations for all cases.
